[package]
name = "endfield-gacha-calculator-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-rational = "0.4"
num-traits = "0.2.19"
once_cell = "1.21.3"
getset = "0.1.6"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.18.3"
